 * Redesigned Upload component
 * Added new javascript Slide toggle which centers on the toggled thing.
 * New upload and collapsed component-show uses it.
 * Changed and onClick to be onclick
 * Renamed Files stage to Upload
 * Fixed pins in placeholder - they were not DOM
 * Changed the lines between bits in the blister into arrows.
 * Messed up import (will fix asap)
 
2006-11-22 cjg
 * Fixed import and it now obeys --user

2006-11-22 cjg
 * Added help to search forms.
 * Reset password option now always shows on login page, but only if you are
    allowed.

2006-11-22 cjg
 * Shifted logged-in toolbar to appear in the dynamic template.
 * Changed the "more" in the template to a toggle.
 * generate_static now reports inexpected files in the website and removes 
    them if --remove is set.
 * The editlink tab now shows the blister bar rather than a <ul>

2006-11-22 moj
 * Shifted mime_type from Convert to Document. Takes the local filename and
   prepends the path. If no filename, uses the main file.
 * Added can_invoke to Repository. This takes a cmd_id and map (as with 
    invocation) and returns 1 if it can be invoked. This checks that the
    invocation exists, and also that all the slots $(SOURCE) etc are filled
    by the map.
 * Converted METS and Unpack to use the new mime_type call

2006-11-12 moj
 * Tweaked exists_and_set to call is_set - was getting the value incorrectly
    so failing on compound fields.

2006-11-22 cjg
 * Added document thumbnail plugin
 * Added popup preview of files
 * Added redo_thumbnails to epadmin
 * mkdir now sets the correct gid
 * $doc->thumbnail_url now checks if the file exists on disk rather than if
    it theoretically should exist.
 * Added getgrnam to Platform
 * Fixed scroll on file roller to go to the outer element not the element 
    being revealed.
 * Changed generate_static --remove to --prune

2006-11-23 cjg
 * EPrint screens now label explicit editor and depositor screens.