@@ -71,15 +71,6 @@ sub get_controls_before
 	return $self->get_basic_controls_before;	
 }
 
-sub render_results_intro
-{
-	my( $self ) = @_;
-
-	my $h2 = $self->{session}->make_element( "h2", class=>"ep_search_desc" );
-	$h2->appendChild( $self->{processor}->{search}->render_conditions_description );
-	return $h2;
-}
-
 sub render_result_row
 {
 	my( $self, $session, $result, $searchexp, $n ) = @_;
